# auth-service/dtos/login_request.go
@@ -1,6 +1,6 @@
 package dtos
 
 type LoginRequest struct {
-    Email    string `json:"email" example:"fatih@example.com"`
-    Password string `json:"password" example:"123456"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
