# auth-service/dtos/login_response.go
@@ -1,0 +1,6 @@
+package dtos
+
+type LoginResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
