# auth-service/dtos/refresh_request.go
@@ -1,4 +1,5 @@
 package dtos
+
 type RefreshRequest struct {
-	RefreshToken string `json:"refresh_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+	RefreshToken string `json:"refresh_token"`
 }
