# auth-service/routes/auth_routes.go
@@ -6,6 +6,9 @@ import (
 )
 
 func AuthRoutes(app *fiber.App) {
-    app.Post("/auth/register", controllers.Register)
+app.Post("/auth/register", controllers.Register)
+app.Post("/auth/login", controllers.Login)
+app.Post("/auth/refresh", controllers.RefreshToken)
+
 
 }
